# graph-rag

./: .gitignore  README.md  SpiderSQLEDA.ipynb  config.yaml  config_nosplit.yaml  evaluate_patches.py  main.py  pyproject.toml
.github/: AGENTS.md
cvefixes_experiments/: README.md  generate_vuln_specs.py
cvefixes_experiments/data/: CVEfixes.db  cvefixes_filtered_by_cve.json  graphml_cvefixes  graphml_cvefixes_fixed
cvefixes_experiments/output/: graph_distribution_comparison.json  joern_kb_ranking_results.json  joern_native_query_results.json  joern_pattern_matching_results.json  joern_sink_results.json  joern_sink_subset_100.json
cvefixes_experiments/scripts/: REPORT_pipeline_verification.md  common.py  exp_joern_sink_verification.py  exp_pattern_matching.py  plot_clusters.py  preliminary_study.py  slicing_depth_study.py
data/: autopatch.py  base.py  pipeline.py
experiments/: README.md  __init__.py  agent_experiment.py  analyze_misses.py  analyze_patches.py  base.py  combining_experiment.py  common.py  dashboard.py  experiment.py  metrics.py  repeated_experience_runner.py  retrieval_experiment.py  run_full_pipeline.py  runner.py  slicing_comparison.py  slicing_repeated.py  verify_crossing.py  visualization.py  visualize_embeddings.py
experiments/dashboard_scripts/: _theme.py  analyze_misses.py  analyze_patches.py  analyze_spaces.py  comparison_dashboard.py  dashboard.py  patch_verification_dashboard.py  visualization.py  visualize_diagnostics.py
experiments/embedding_space/: README.md  compare_spaces.py  space_analysis_experiment.py  visualize_embeddings.py  visualize_gin_struct.py
experiments/exp/: README.md  codebert_fullsource_baseline.py  combining_experiment.py  retrieval_experiment.py  slicing_comparison.py  (+2 more)
src/: diagnostics.py
tests/: test_agent_experiment.py  test_autopatch.py  test_batch_inference.py  test_common.py  test_cwe_recall_shared.py  test_embedders.py  test_graph_context.py  test_io.py  test_load_lightweight.py  test_metrics.py  test_patcher.py  test_pipeline.py  test_precomputed_retriever.py  test_rag.py  test_retrieval_eval.py
(+27557 files in other folders)
