[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "faiss-cpu>=1.13.2",
    "google-adk>=1.31.1",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.15",
    "litellm>=1.83.0",
    "netlsd>=1.0.2",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rustworkx>=0.17.1",
    "scatter>=0.1.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]


[tool.uv.extra-build-dependencies]
torch-scatter = ["torch", "setuptools"]
torch-sparse = ["torch", "setuptools"]
torch-cluster = ["torch", "setuptools"]
torch-spline-conv = ["torch", "setuptools"]
pyg-lib = ["torch", "setuptools"]

[pytest]
pythonpath = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "severity_high: bug changes experiment results (metrics are wrong)",
    "severity_low: corner-case robustness (NaN, crash on edge input)",
    "integration: live API tests (require AZURE_API_KEY and AZURE_API_BASEURL)",
]
